又加了一点字

--- a/file/pay.html
+++ b/file/pay.html
@@ -51,5 +51,5 @@
 		</style>
 		<div class="preloading"><div class="inner"></div></div>
 	</body>
-	<script type="text/javascript" src="source/dev/config.js">阿萨德公司的符合规范和加工费dsf施工方式对公司东方gdfg</script>
+	<script type="text/javascript" src="source/dev/config.js">1234阿萨德公司的符合规范和加工费dsf施工方式对公司东方gdfg</script>
 </html>
