--- a/file/pay.html
+++ b/file/pay.html
@@ -49,7 +49,7 @@
 		    background-size: 16px;
 		}
 		</style>
-		<div class="preloading"><div class="inner"></div></div>
+		<div class="preloading"><div class="inner">234阿萨德公司的符合规范和加工费dsf施工方式对公司东方gdfg</div></div>
 	</body>
-	<script type="text/javascript" src="source/dev/config.js">1234阿萨德公司的符合规范和加工费dsf施工方式对公司东方gdfg</script>
+	<script type="text/javascript" src="source/dev/config.js"></script>
 </html>
