--- a/file/pay.html
+++ b/file/pay.html
@@ -9,7 +9,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="white">
         <meta name="format-detection" content="telephone=no">
-		<title>确认订单</title>
+		<title>确认订确认订单确认订单确认订单确认订单确认订单单</title>
 		<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 		<script type="text/javascript" src="package/requirejs/2.1.17/require.min.js"></script>
 	</head>
